# webrtcagc

./: CMakeLists.txt  README.md  agc_wrapper.c  build_so.sh  main.c  quick_test.sh  test_go_binding.go
go/: README.md  agc.go  go.mod
go/agc/: agc.go  agc_wrapper.h
go/example/: example  go.mod  main.go
